--- a/kooplexhub/education/templates/education_submenu.html
+++ b/kooplexhub/education/templates/education_submenu.html
@@ -10,26 +10,12 @@
      <div class="col-8">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item"><a {% if submenu == 'teacher' %} class="nav-link active" href="#" {% else %} class="nav-link" href="{% url 'education:teacher' %}" {% endif %}>Teaching</a></li>
+	  <li class="nav-item"><a {% if submenu == 'assignment_teacher' %} class="nav-link active" href="#" {% else %} class="nav-link" href="{% url 'education:assignment_teacher' %}" {% endif %}>Assignment manager</a></li>
           <li class="nav-item"><a {% if submenu == 'student' %} class="nav-link active" href="#" {% else %} class="nav-link" href="{% url 'education:student' %}" {% endif %}>Courses</a></li>
-	  <li class="nav-item"><a {% if submenu == 'assignment' %} class="nav-link active" href="#" {% else %} class="nav-link" href="{% url 'education:assignment' %}" {% endif %}>Assignments</a></li>
+	  <li class="nav-item"><a {% if submenu == 'assignment_student' %} class="nav-link active" href="#" {% else %} class="nav-link" href="{% url 'education:assignment_student' %}" {% endif %}>Assignments due</a></li>
         </ul>
      </div>
      <div class="col-1">
-	     {% comment %}
-      {% if submenu == 'list' %}
-       <div class="d-flex justify-content-end">
-	  <form action="{% url 'project:set_pagination' %}" method="post">
-		  {% csrf_token %}
-	    <input type="text" name="paginate_by" value="{{ user.profile.paginate_project_list }}" maxlength="3" size="3">
-	  </form>
-	 {% if user.profile.layout_project_list %}
-           <a href="{% url 'project:layout_flip' %}" class="text-dark"><span class="oi oi-grid-two-up"></span></a>
-	 {% else %}
-           <a href="{% url 'project:layout_flip' %}" class="text-dark"><span class="oi oi-list"></span></a>
-	 {% endif %}
-       </div>
-      {% endif %}
-	     {% endcomment %}
      </div>
   </div>
 </nav>
