--- a/kooplexhub/education/templates/assignment.html
+++ b/kooplexhub/education/templates/assignment.html
@@ -53,7 +53,7 @@
     </form>
   </div>
   {% else %}
-  <div class="tab-pane fade" id="newAssignment" role="tabpanel" aria-labelledby="tab-new">
+  <div class="tab-pane fade {% if active_tab == "tab-new" %}show active{% endif %}" id="newAssignment" role="tabpanel" aria-labelledby="tab-new">
       <div class="alert alert-warning">There are no candidate subfolders in <code>{{ f_assignment.folder_usercontainer }}</code> directory. Please create one and place all files into it to be part of a new assignment. Empty folders cannot be selected.</div>
   </div>
   {% endif %}
