education dropdown menu disabled items

--- a/kooplexhub/education/templates/menuitem_education.html
+++ b/kooplexhub/education/templates/menuitem_education.html
@@ -1,27 +1,28 @@
 {% if user.is_authenticated %}
-{% if user.profile.is_student and user.profile.is_teacher %}
   <li class="nav-item dropdown {{ active }}">
     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownEdu" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Education</a>
     <div class="dropdown-menu" aria-labelledby="navbarDropdownEdu">
+  {% if user.profile.is_teacher %}
       <a class="dropdown-item" href="{% url 'education:teacher' %}">Teaching</a>
       <a class="dropdown-item" href="{% url 'education:assignment_teacher' %}">Assignment manager</a>
+  {% else %}
+      <a class="dropdown-item disabled" href="#">Teaching</a>
+      <a class="dropdown-item disabled" href="#">Assignment manager</a>
+  {% endif %}
       <hr class="dropdown-divider">
+  {% if user.profile.is_student %}
       <a class="dropdown-item" href="{% url 'education:student' %}">Courses</a>
       <a class="dropdown-item" href="{% url 'education:assignment_student' %}">Assignments due</a>
+  {% else %}
+      <a class="dropdown-item disabled" href="#">Courses</a>
+      <a class="dropdown-item disabled" href="#">Assignments due</a>
+  {% endif %}
     </div>
   </li>
-{% elif user.profile.is_student %}
-  <li class="nav-item {{ active }}">
-    <a href="{% url 'education:student' %}" class="nav-link" data-toggle="tooltip" title="Access notebook environments related to those courses you attend this semester" data-placement="bottom">Courses</a>
-  </li>
-{% elif user.profile.is_teacher %}
-  <li class="nav-item {{ active }}">
-    <a href="{% url 'education:teacher' %}" class="nav-link" data-toggle="tooltip" title="Access notebook environments related to those courses you teach this semester" data-placement="bottom">Teaching</a>
-  </li>
 {% else %}
+  {% comment %}
   <li class="nav-item">
     <a href="#" class="nav-link disabled">Education</a>
   </li>
-{% endif %}
-{% else %}
+  {% endcomment %}
 {% endif %}
