profile link from settings.py garbage course workdir garbage assignment workdir

--- a/kooplexhub/hub/templates/navbarmenu_right.html
+++ b/kooplexhub/hub/templates/navbarmenu_right.html
@@ -1,3 +1,5 @@
+{% load profilelink %}
+
 {% include 'about.html' %}
 {% if user.is_authenticated %}
   {% include 'usertokens.html' %}
@@ -16,8 +18,7 @@
   <ul class="dropdown-menu" aria-labelledby="navbarDropdownRight">
    {% if user.is_authenticated %}
     <li><a class="dropdown-item" href="{% url 'logout' %}">Logout <span class="oi oi-account-logout"></span></a></li>
-    {# FIXME: hardcoded url #}
-    <li><a class="dropdown-item" href="https://veo.vo.elte.hu/oauth/accounts/profile/" data-toggle="modal" data-target="#profile">Profile</a></li>
+    {% profilelink %}
     <li><a class="dropdown-item" href="#" data-toggle="modal" data-target="#reset-token" data-intro="#token">Reset token</a></li>
    {% else %}
     <li><a class="dropdown-item" href="{% url 'social:begin' 'kooplex' %}">Log in <span class="oi oi-account-login"></span></a>
