--- a/kooplexhub/container/templates/container_partial_list.html
+++ b/kooplexhub/container/templates/container_partial_list.html
@@ -1,7 +1,7 @@
 {% load buttons %}
 {% load check_show %}
 
-<div class="card bg-light border-secondary shadow mb-3 envcard">
+<div class="card bg-light border-secondary shadow mb-3 envcard" data-intro="#container_buttons" >
   <div class="card-header">
     <div class="row">
       <div class="col-1">
