--- a/kooplexhub/education/templates/course_configure.html
+++ b/kooplexhub/education/templates/course_configure.html
@@ -38,12 +38,16 @@
       {% csrf_token %}
       {{ groupform }}
       {% include 'apply_cancel.html' %}
+      <input type='hidden' name='active_tab' value='group'>
     </form>
+    {% if t_group.data|length > 0 %}
     <form id="groupSettings" class="form-horizontal" action="{% url 'education:configuregroup' usercoursebinding_id %}" method="post">
       {% csrf_token %}
       {% render_table t_group %}
       {% include 'apply_cancel.html' %}
+      <input type='hidden' name='active_tab' value='group'>
     </form>
+    {% endif %}
   </div>
   <div class="tab-pane fade {% if active_tab == "tab-teacher" %}show active{% endif %}" id="addteachersCourse" role="tabpanel" aria-labelledby="tab-teacher">
     <form id="courseAddTeacherForm" class="form-horizontal" action="{% url 'education:addteacher' usercoursebinding_id %}" method="post">
