--- a/kooplexhub/container/templates/container_partial_card.html
+++ b/kooplexhub/container/templates/container_partial_card.html
@@ -6,7 +6,7 @@
     <img src="..." class="card-img-top" alt="...">
 {% endcomment %}
     <div class="card-header">
-      <h5 class="card-title">{{ container.name }}
+      <h5 class="card-title">{{ container.friendly_name }}
         <div class="float-end">
 	  {% container_image container %}
         </div>
